--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ theme:
   #
   # https://squidfunk.github.io/mkdocs-material/getting-started/#color-palette
   palette:
+    scheme: 'slate'
     primary: 'teal'
     accent: 'indigo'
   #
@@ -59,13 +60,6 @@ theme:
   # https://squidfunk.github.io/mkdocs-material/getting-started/#icons
   icon:
     repo: 'fontawesome/brands/github-square'
-
-#
-# You can uncomment this line together with one of the below lines to add custom CSS to the documentation.
-extra_css:
-#  - 'assets/css/extra.css' # Uncomment this line if you want to use both dark theme and the tabbed css.
-  - 'assets/css/styling/dark.css' # Uncomment this line if you only want Dark theme
-#  - 'assets/css/extensions/tabbed.css' # Uncomment this line if you only want the CSS for tabbed
 
 extra:
   #
