--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,7 +107,8 @@ markdown_extensions:
   #- pymdownx.pathconverter:
   #- pymdownx.progressbar:
   #- pymdownx.smartsymbols:
-  #- pymdownx.snippets:
+  - pymdownx.snippets:
+      base_path: 'docs'
   #- pymdownx.striphtml:
   #- pymdownx.superfences:
   #- pymdownx.tabbed: # This extension requires the 'tabbed.css' to be used.
