--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,7 +108,7 @@ markdown_extensions:
   #- pymdownx.progressbar:
   #- pymdownx.smartsymbols:
   - pymdownx.snippets:
-      base_path: 'docs'
+      base_path: 'theme/snippets'
   #- pymdownx.striphtml:
   #- pymdownx.superfences:
   #- pymdownx.tabbed: # This extension requires the 'tabbed.css' to be used.
